# CC-DL-template

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  cookiecutter.json  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_project_generation.py
